--- a/TrackEditor/EditSurfaceDialog.ui
+++ b/TrackEditor/EditSurfaceDialog.ui
@@ -55,9 +55,9 @@
       </widget>
      </item>
      <item row="6" column="1">
-      <widget class="QCheckBox" name="ck10">
+      <widget class="QCheckBox" name="ck10PartialTrans">
        <property name="text">
-        <string>Bit 10</string>
+        <string>Partial Transparency</string>
        </property>
       </widget>
      </item>
