--- a/TrackEditor/EditSeriesDialog.ui
+++ b/TrackEditor/EditSeriesDialog.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>538</width>
+    <width>300</width>
     <height>100</height>
    </rect>
   </property>
@@ -15,7 +15,7 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
-    <layout class="QGridLayout" name="gridLayout">
+    <layout class="QGridLayout" name="gridLayout1">
      <item row="0" column="0">
       <widget class="QLabel" name="lblStartChunk">
        <property name="text">
@@ -76,7 +76,11 @@
        </property>
       </widget>
      </item>
-     <item row="0" column="3">
+    </layout>
+   </item>
+   <item>
+    <layout class="QGridLayout" name="gridLayout2">
+     <item row="0" column="0">
       <widget class="QLabel" name="lblField">
        <property name="text">
         <string>Field</string>
@@ -86,13 +90,17 @@
        </property>
       </widget>
      </item>
-     <item row="1" column="3">
+     <item row="1" column="0">
       <widget class="QComboBox" name="cbField">
        <property name="editable">
         <bool>false</bool>
        </property>
       </widget>
      </item>
+    </layout>
+   </item>
+   <item>
+    <layout class="QGridLayout" name="gridLayout3">
      <item row="0" column="4">
       <widget class="QLabel" name="lblStartValue">
        <property name="text">
