--- a/TrackEditor/MainWindow.ui
+++ b/TrackEditor/MainWindow.ui
@@ -248,12 +248,6 @@
     <addaction name="actImportMangled"/>
     <addaction name="actExportMangled"/>
    </widget>
-   <widget class="QMenu" name="menuEdit">
-    <property name="title">
-     <string>Edit</string>
-    </property>
-    <addaction name="actEditSeries"/>
-   </widget>
    <widget class="QMenu" name="menuHelp">
     <property name="title">
      <string>Help</string>
@@ -265,12 +259,12 @@
      <string>View</string>
     </property>
     <addaction name="actEditData"/>
+    <addaction name="actEditSeries"/>
     <addaction name="actGlobalSettings"/>
     <addaction name="separator"/>
     <addaction name="actDebug"/>
    </widget>
    <addaction name="menuFile"/>
-   <addaction name="menuEdit"/>
    <addaction name="menuView"/>
    <addaction name="menuHelp"/>
   </widget>
@@ -307,7 +301,7 @@
     <string>Ctrl+Shift+S</string>
    </property>
   </action>
-  <action name="actEditSeries">
+  <action name="actEditSeriesa">
    <property name="text">
     <string>Edit series...</string>
    </property>
@@ -358,6 +352,14 @@
    </property>
    <property name="text">
     <string>Global Track Settings</string>
+   </property>
+  </action>
+  <action name="actEditSeries">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Edit Series...</string>
    </property>
   </action>
  </widget>
