adding display settings dock widget

--- a/TrackEditor/MainWindow.ui
+++ b/TrackEditor/MainWindow.ui
@@ -37,40 +37,6 @@
          </widget>
         </item>
         <item>
-         <layout class="QHBoxLayout" name="debugLayout">
-          <item>
-           <widget class="QCheckBox" name="ckShowSurface">
-            <property name="text">
-             <string>Show Surface</string>
-            </property>
-            <property name="checked">
-             <bool>true</bool>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QCheckBox" name="ckShowWireframe">
-            <property name="text">
-             <string>Show Wireframe</string>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <spacer name="horizontalSpacer">
-            <property name="orientation">
-             <enum>Qt::Horizontal</enum>
-            </property>
-            <property name="sizeHint" stdset="0">
-             <size>
-              <width>40</width>
-              <height>20</height>
-             </size>
-            </property>
-           </spacer>
-          </item>
-         </layout>
-        </item>
-        <item>
          <widget class="CTrackPreview" name="openGLWidget">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
@@ -261,6 +227,7 @@
     <addaction name="actEditData"/>
     <addaction name="actEditSeries"/>
     <addaction name="actGlobalSettings"/>
+    <addaction name="actDisplaySettings"/>
     <addaction name="separator"/>
     <addaction name="actDebug"/>
    </widget>
@@ -360,6 +327,14 @@
    </property>
    <property name="text">
     <string>Edit Series...</string>
+   </property>
+  </action>
+  <action name="actDisplaySettings">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Display Settings</string>
    </property>
   </action>
  </widget>
