--- a/TrackEditor/DisplaySettings.ui
+++ b/TrackEditor/DisplaySettings.ui
@@ -15,7 +15,7 @@
   </property>
   <layout class="QGridLayout" name="gridLayout">
    <item row="5" column="0">
-    <widget class="QLabel" name="label_4">
+    <widget class="QLabel" name="lblRLane">
      <property name="text">
       <string>Right Lane</string>
      </property>
@@ -32,7 +32,7 @@
     </widget>
    </item>
    <item row="11" column="0">
-    <widget class="QLabel" name="label_10">
+    <widget class="QLabel" name="lblLUOWall">
      <property name="text">
       <string>L Upper Outer Wall</string>
      </property>
@@ -77,7 +77,7 @@
     </widget>
    </item>
    <item row="9" column="0">
-    <widget class="QLabel" name="label_8">
+    <widget class="QLabel" name="lblRWall">
      <property name="text">
       <string>Right Wall</string>
      </property>
@@ -101,7 +101,7 @@
     </widget>
    </item>
    <item row="14" column="0">
-    <widget class="QLabel" name="label_13">
+    <widget class="QLabel" name="lblRLOWall">
      <property name="text">
       <string>R Lower Outer Wall</string>
      </property>
@@ -132,7 +132,7 @@
     </widget>
    </item>
    <item row="13" column="0">
-    <widget class="QLabel" name="label_12">
+    <widget class="QLabel" name="lblRUOWall">
      <property name="text">
       <string>R Upper Outer Wall</string>
      </property>
@@ -198,7 +198,7 @@
     </widget>
    </item>
    <item row="7" column="0">
-    <widget class="QLabel" name="label_6">
+    <widget class="QLabel" name="lblRShoulder">
      <property name="text">
       <string>Right Shoulder</string>
      </property>
@@ -235,7 +235,7 @@
     </widget>
    </item>
    <item row="16" column="0">
-    <widget class="QLabel" name="label_15">
+    <widget class="QLabel" name="lblEnvirFloor">
      <property name="text">
       <string>Environment Floor</string>
      </property>
@@ -252,7 +252,7 @@
     </widget>
    </item>
    <item row="3" column="0">
-    <widget class="QLabel" name="label_17">
+    <widget class="QLabel" name="lblAll">
      <property name="text">
       <string>All</string>
      </property>
@@ -269,7 +269,7 @@
     </widget>
    </item>
    <item row="12" column="0">
-    <widget class="QLabel" name="label_11">
+    <widget class="QLabel" name="lblLLOWall">
      <property name="text">
       <string>L Lower Outer Wall</string>
      </property>
@@ -295,7 +295,7 @@
     </widget>
    </item>
    <item row="10" column="0">
-    <widget class="QLabel" name="label_9">
+    <widget class="QLabel" name="lblRoof">
      <property name="text">
       <string>Roof</string>
      </property>
@@ -305,7 +305,7 @@
     </widget>
    </item>
    <item row="8" column="0">
-    <widget class="QLabel" name="label_7">
+    <widget class="QLabel" name="lblLWall">
      <property name="text">
       <string>Left Wall</string>
      </property>
@@ -329,7 +329,7 @@
     </widget>
    </item>
    <item row="4" column="0">
-    <widget class="QLabel" name="label_3">
+    <widget class="QLabel" name="lblLLane">
      <property name="text">
       <string>Left Lane</string>
      </property>
@@ -346,7 +346,7 @@
     </widget>
    </item>
    <item row="15" column="0">
-    <widget class="QLabel" name="label_14">
+    <widget class="QLabel" name="lblOWallFloor">
      <property name="text">
       <string>Outer Wall Floor</string>
      </property>
@@ -370,7 +370,7 @@
     </widget>
    </item>
    <item row="6" column="0">
-    <widget class="QLabel" name="label_5">
+    <widget class="QLabel" name="lblLShoulder">
      <property name="text">
       <string>Left Shoulder</string>
      </property>
