--- a/TrackEditor/EditDataWidget.ui
+++ b/TrackEditor/EditDataWidget.ui
@@ -359,7 +359,7 @@
          <item row="10" column="0">
           <widget class="QLabel" name="label_27">
            <property name="text">
-            <string>unknown 4</string>
+            <string>AI max acceleration</string>
            </property>
           </widget>
          </item>
@@ -408,7 +408,7 @@
           </widget>
          </item>
          <item row="11" column="0">
-          <widget class="QLineEdit" name="leUnk04"/>
+          <widget class="QLineEdit" name="leAIMaxAccel"/>
          </item>
          <item row="10" column="1">
           <widget class="QLabel" name="label_28">
